# blog-writer-agent

./: pyproject.toml  report.md
src/blog_writer_agent/: crew.py  main.py
src/blog_writer_agent/config/: agents.yaml  tasks.yaml
