[project]
name = "blog_writer_agent"
version = "0.1.0"
description = "blog-writer-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
blog_writer_agent = "blog_writer_agent.main:run"
run_crew = "blog_writer_agent.main:run"
train = "blog_writer_agent.main:train"
replay = "blog_writer_agent.main:replay"
test = "blog_writer_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
